Adiciona rotas com animação entre as duas páginas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>todo-list</title>
   </head>
   <body>
+
+  <style>
+    .fade-enter-active, .fade-leave-active{
+      transition: opacity .5s
+    }
+    .fade-enter, .fade-leave-to{
+      opacity: 0
+    }
+  </style>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
